--- a/css/css-modules/home.css
+++ b/css/css-modules/home.css
@@ -1,24 +1,3 @@
-.section-home{
-	position: relative;
-	min-height: 100%;
-	background: url(../../images/background.jpg);
-	background-size: cover;
-	background-position: center;
-	background-attachment: fixed;
-}
-
-.section-home::before{
-  content: '';
-  position: absolute;
-  top: 20px;
-  bottom: 20px;
-  left: 20px;
-  right: 20px;
-  border: 1px solid var(--white);
-	z-index: 40;
-	opacity: 0.3;
-}
-
 .section-home .logo{
 	height: 205px;
 	padding: 40px 10px;
@@ -37,51 +16,160 @@
 	z-index: 60;
 	text-align: center;
 	height: 100%;
-}
-
-.section-home .welcome h1,
-.section-home .welcome h2{
-	font-family: var(--mainTitle-font);
-	color: var(--white);
+	padding-top: 170px;
 }
 
 .section-home .welcome h1{
+	font-family: var(--mainTitle-font);
 	text-transform: uppercase;
 	font-weight: 900;
 	line-height: 1em;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
+	color: var(--blue-light);
+	background: linear-gradient(to right, var(--blue-light), var(--blue));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .section-home .welcome h2{
 	font-weight: 100;
+	font-size: 1.4em;
+	text-transform: uppercase;
 	margin-bottom: 90px;
+	font-family: var(--normal-font);
 }
 
-.section-home .welcome a.start{
-	display: inline-block;
-	text-decoration: none;
-	color: var(--white);
-	padding: 10px 20px;
-	border: 1px solid var(--white);
-	background: transparent;
-	transition: background .2s, color .2s;
-}
-
-.section-home .welcome a.start:hover{
-	color: var(--blue);
-	background: var(--white);
-}
-
-.hello{
-  padding-bottom: 45px;
+a.start:hover{
+	padding: 15px 50px;	
+	background: linear-gradient(to right, var(--blue-light), var(--blue));
 }
 
 .hello p{
   margin-bottom: 1em;
 }
 
-.section-work{
-  background: var(--grey-light);
+.letsworktogether{
+	padding-top: 45px;
+	text-align: center;
+}
+
+.section-working-process h2{
+	color: var(--white);
+}
+
+.working-process .w-col{
+	padding: 1px;
+}
+
+.working-process-bloc{
+	background: var(--blue-light);
+	padding: 25px;
+	position: relative;
+	cursor: pointer;
+	transition: background .2s;
+	padding-top: 90px;
+}
+
+.working-process-bloc:hover,
+.working-process-bloc.open{
+	background: var(--blue);
+}
+
+.working-process-bloc.open{
+	padding-bottom: 40px;
+}
+
+.wpbh-round{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 160px;
+	height: 160px;
+	background: var(--blue);
+	padding: 25px;
+	border-radius: 100%;
+	transform: translate(-50%, -50%);
+	transition: background .2s;
+}
+
+.working-process-bloc:hover .wpbh-round,
+.working-process-bloc.open .wpbh-round{
+	background: var(--blue-light);
+}
+
+.wpbh-round img{
+	width: 40px;
+	height: auto;
+	position: absolute;
+	bottom: 30px;
+	right: 30px;
+}
+
+.working-process-bloc-header{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 160px;
+	overflow: hidden;
+}
+
+.working-process-bloc h3,
+.working-process-bloc p{
+	color: var(--white);
+}
+
+.working-process-bloc h3{
+	font-size: 1.3em;
+	font-weight: 400;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+
+.working-process-bloc p{
+	font-size: .8em;
+	font-weight: 300;
+	position: relative;
+	overflow: hidden;
+	transition: height .15s ease-out;
+}
+
+.working-process-bloc p.larger::before{
+	content: '';
+	text-transform: uppercase;
+	text-align: center;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 25px;
+	background: linear-gradient(transparent, var(--blue-light));
+	transition: bottom .2s;
+}
+
+.working-process-bloc:hover p.larger::before,
+.working-process-bloc.open p.larger::before{
+	bottom: -50px;
+}
+
+.working-process-bloc::after{
+	content: 'Afficher plus';
+	display: inline-block;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: .6em;
+	color: var(--white);
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 100%;
+	height: 26px;
+	transform: translate(-50%, 6px);
+	opacity: .6;
+}
+
+.working-process-bloc.open::after{
+	content: 'Afficher moins'
 }
 
 .project{
@@ -94,18 +182,24 @@
 	transform: translateY(-10px);
 }
 
+.project a{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
 .project h4{
   margin-bottom: 0;
   color: var(--title-color);
   margin-bottom: 5px;
 }
 
-.project h4 a{
+.project h4{
   text-decoration: underline;
   color: var(--blue-light);
 	transition: color .2s;
 }
-.project h4 a:hover{
+.project h4:hover{
   text-decoration: none;
 	color: var(--blue);
 }
@@ -131,28 +225,83 @@
 	display: block;
 }
 
+.button{
+	display: inline-block;
+	text-decoration: none;
+	color: var(--white);
+	font-weight: 500;
+	padding: 15px 30px;
+	text-transform: uppercase;
+	border-radius: 100px;
+	border: none;
+	background: linear-gradient(to right, var(--blue-light), var(--blue));
+	transition: all .2s var(--elastic);
+}
+
+.button:hover{
+	background: linear-gradient(to left, var(--blue-light), var(--blue));
+}
+
+.encrypted-email{
+	margin-top: 25px;
+	font-size: 2em;
+	font-weight: 700;
+}
+
+.letshaveacoffee{
+	margin-top: 45px;
+}
+
+.letshaveacoffee svg{
+	width: 20px;
+	height: 20px;
+	margin-right: 10px;
+	transform: translateY(4px);
+}
+
 @media screen and (min-width: 1100px){
+
+	.section-work .w-col{
+		padding: 0;
+	}
+
   .project{
     position: relative;
     overflow: hidden;
     height: 305px;
-    border: 1px solid rgba(0,0,0,0.03);
 		transition: background .2s;
+		margin: 0;
   }
 
 	.project-info{
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
+    text-align: center;
     padding: 25px;
-    transform: translateY(110%);
-    transition: transform .2s ease-out;
+    background: #000;
+    transition: opacity .2s ease-out;
 		box-shadow: 0px 0px 6px rgba(0,0,0,0.3);
+		transform: translateY(0px);
+		opacity: 0;
   }
 
-	.project:hover{
-		background: var(--blue-light);
+	.project-info a{
+		padding-top: 90px;
+	}
+
+	.project-info h4{
+		font-size: 1.5em;
+		text-decoration: none;
+	}
+
+  .project em{
+  	color: var(--white);
+  }
+	.project strong{
+		color: var(--white);
 	}
 
 	.project img{
@@ -162,10 +311,9 @@
 
   .project:hover img{
 		transform: scale(1.3);
-		opacity: 0.8;
   }
 
   .project:hover .project-info{
-    transform: translateY(0);
+   	opacity: .95;
   }
 }
