--- a/css/css-modules/init.css
+++ b/css/css-modules/init.css
@@ -1,3 +1,12 @@
+@font-face
+{
+  font-family: 'jaapokkisubtract';
+  font-weight: normal;
+  font-style: normal;
+
+  src: url('../../fonts/subtract/web/jaapokkisubtract-regular.woff') format('woff');
+}
+
 html,
 body{
   position: relative;
@@ -12,6 +21,16 @@ body{
   background: var(--white);
 }
 
+body{
+  opacity: 0;
+  transition: opacity 1s;
+  transition-delay: .2s;
+}
+
+body.ready{
+  opacity: 1;
+}
+
 h1,
 h2,
 h3,
@@ -23,19 +42,11 @@ h4{
 }
 
 h1{
-  font-size: 3.4em;
+  font-size: 4.3em;
 }
 
 h2{
-  font-size: 2em;
-}
-
-h3{
-  font-size: 1.4em;
-}
-
-h4{
-  font-size: 1.2em;
+  font-size: 3.8em;
 }
 
 p{
