--- a/css/css-modules/sections.css
+++ b/css/css-modules/sections.css
@@ -17,6 +17,50 @@
   padding-top: 70px;
 }
 
+.section-home{
+	position: relative;
+	min-height: 100%;
+	background: url(../../images/background.jpg);
+	background-size: cover;
+	background-position: center;
+}
+
+.section-home::before{
+	display: none;
+  content: '';
+  position: absolute;
+  top: 20px;
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
+  border: 1px solid var(--white);
+	z-index: 40;
+	opacity: 0.3;
+}
+
+.section-working-process{
+	position: relative;
+	background: url(../../images/working-background.jpg);
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+}
+
+.section-work{
+  background: var(--grey-light);
+}
+
+.section-animated{
+	transform: translateY(120px);
+	opacity: 0;
+	transition: all 1s;
+}
+
+body.scrolled .section-animated{
+	transform: translateY(0);
+	opacity: 1;
+}
+
 @media screen and (min-width: 800px){
 	.section-inner{
 		padding: 55px 175px;
