--- a/css/css-modules/variables.css
+++ b/css/css-modules/variables.css
@@ -1,7 +1,7 @@
 :root{
 
-  --blue: #118a7e;
-  --blue-light: #1f6f78;
+  --blue: #3c9099;
+  --blue-light: #68c1cb;
 
   --dark: #1a1c1c;
 
@@ -12,13 +12,16 @@
    --grey: #808584;
    --grey-dark: #353939;
 
-   --text-color: #424040;
+   --text-color: #a2a6a6;
    --title-color: #1d1d1d;
 
-   --normal-font:         'Open Sans', sans-serif;
-   --title-font:         'Roboto Slab', sans-serif;
-   --mainTitle-font:         'Open Sans', sans-serif;
+   --normal-font:         'Poppins', sans-serif;
+   --title-font:         'Poppins', sans-serif;
+   --mainTitle-font:         'jaapokkisubtract', sans-serif;
 
    --light-shadow:        0px 2px 3px rgba(0,0,0,0.3);
    --light-shadow-reverse: 0px -2px 3px rgba(0,0,0,0.3);
+
+
+  --elastic: cubic-bezier(0.680, -0.550, 0.265, 1.550);
 }
