fix linear gradient on h1

--- a/css/css-modules/home.css
+++ b/css/css-modules/home.css
@@ -26,7 +26,11 @@
 	line-height: 1em;
 	margin-bottom: 10px;
 	color: var(--blue-light);
-	background: linear-gradient(to right, var(--blue-light), var(--blue));
+	background-image: -webkit-linear-gradient(to right, var(--blue-light), var(--blue));
+  background-image: -moz-linear-gradient(to right, var(--blue-light), var(--blue));
+  background-image: -ms-linear-gradient(to right, var(--blue-light), var(--blue));
+  background-image: -o-linear-gradient(to right, var(--blue-light), var(--blue));
+	background-image: linear-gradient(to right, var(--blue-light), var(--blue));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
